--- a/docs/src/index.scss
+++ b/docs/src/index.scss
@@ -16,7 +16,7 @@ body {
 
 .markdown {
     blockquote {
-        margin: 0 0 1rem 1rem;
+        margin: 0 0 1rem 0;
         padding: 0 1rem;
         color: #57606a;
         border-left: 4px solid #d0d7de;
