Update List style imports

--- a/src/list/index.scss
+++ b/src/list/index.scss
@@ -1,6 +1,4 @@
 @forward '@material/list/evolution-variables';
 @forward '@material/list/evolution-mixins';
 
-@use '@material/list/evolution-mixins';
-
-@include evolution-mixins.core-styles;
+@use './styles';
