--- a/src/index.scss
+++ b/src/index.scss
@@ -39,3 +39,43 @@
 @forward './text-field' as text-field-*;
 @forward './tooltip' as tooltip-*;
 @forward './top-app-bar' as top-app-bar-*;
+
+@use './avatar/styles' as avatar;
+@use './badge/styles' as badge;
+@use './banner/styles' as banner;
+@use './button/styles' as button;
+@use './card/styles' as card;
+@use './checkbox/styles' as checkbox;
+@use './chips/styles' as chip;
+@use './circular-progress/styles' as circular-progress;
+@use './select/styles' as select;
+@use './data-table/styles' as data-table;
+@use './dialog/styles' as dialog;
+@use './drawer/styles' as drawer;
+@use './elevation/styles' as elevation;
+@use './fab/styles' as fab;
+@use './floating-label/styles' as floating-label;
+@use './form-field/styles' as form-field;
+@use './icon/styles' as icon;
+@use './icon-button/styles' as icon-button;
+@use './image-list/styles' as image-list;
+@use './layout/styles' as layout;
+@use './layout-grid/styles' as layout-grid;
+@use './linear-progress/styles' as linear-progress;
+@use './line-ripple/styles' as line-ripple;
+@use './list/styles' as list;
+@use './menu/styles' as menu;
+@use './modal/styles' as modal;
+@use './notched-outline/styles' as notched-outline;
+@use './radio/styles' as radio;
+@use './ripple/styles' as ripple;
+@use './segmented-button/styles' as segmented-button;
+@use './side-sheet/styles' as side-sheet; 
+@use './slider/styles' as slider; 
+@use './snackbar/styles' as snackbar;
+@use './switch/styles' as switch;
+@use './tabs/styles' as tab;
+@use './text-field/styles' as text-field;
+@use './tooltip/styles' as tooltip;
+@use './top-app-bar/styles' as top-app-bar;
+@use './typography/styles' as typography;
