--- a/src/avatar/styles.scss
+++ b/src/avatar/styles.scss
@@ -1,21 +1,8 @@
 @use '@material/typography';
-
-$mdc-avatar-size: 40px;
-$mdc-avatar-size-small: 24px;
-$mdc-avatar-size-large: 64px;
-
-$mdc-avatar-icon-font-size: 24px;
-$mdc-avatar-icon-font-size-small: 16px;
-$mdc-avatar-icon-font-size-large: 48px;
-
-$mdc-avatar-text-font-size: 20px;
-$mdc-avatar-text-font-size-small: 12px;
-$mdc-avatar-text-font-size-large: 32px;
+@use './variables';
 
 .mdc-avatar {
     display: inline-flex;
-    width: $mdc-avatar-size;
-    height: $mdc-avatar-size;
     justify-content: center;
     align-items: center;
     border-radius: 100%;
@@ -25,49 +12,64 @@ $mdc-avatar-text-font-size-large: 32px;
     background-color: #bdbdbd;
     vertical-align: middle;
 
-    & &__image {
+    .mdc-avatar__image {
         width: 100%;
         height: 100%;
+        border-radius: 100%;
     }
 
-    & &__icon {
-        font-size: $mdc-avatar-icon-font-size;
+    .mdc-avatar__icon {
+        font-size: variables.$icon-font-size-medium;
     }
 
-    & &__text {
+    .mdc-avatar__text {
         width: 100%;
         height: 100%;
-        font-size: $mdc-avatar-text-font-size;
+        font-size: variables.$text-font-size-medium;
+        line-height: variables.$size-medium;
         text-align: center;
-        line-height: $mdc-avatar-size;
         @include typography.base;
     }
 
     &.mdc-avatar--small {
-        width: $mdc-avatar-size-small;
-        height: $mdc-avatar-size-small;
+        width: variables.$size-small;
+        height: variables.$size-small;
     
         .mdc-avatar__icon {
-            font-size: $mdc-avatar-icon-font-size-small;
+            font-size: variables.$icon-font-size-small;
         }
     
         .mdc-avatar__text {
-            font-size: $mdc-avatar-text-font-size-small;
-            line-height: $mdc-avatar-size-small;
+            font-size: variables.$text-font-size-small;
+            line-height: variables.$size-small;
+        }
+    }
+
+    &.mdc-avatar--medium {
+        width: variables.$size-medium;
+        height: variables.$size-medium;
+    
+        .mdc-avatar__icon {
+            font-size: variables.$icon-font-size-medium;
+        }
+    
+        .mdc-avatar__text {
+            font-size: variables.$text-font-size-medium;
+            line-height: variables.$size-medium;
         }
     }
     
     &.mdc-avatar--large {
-        width: $mdc-avatar-size-large;
-        height: $mdc-avatar-size-large;
+        width: variables.$size-large;
+        height: variables.$size-large;
     
         .mdc-avatar__icon {
-            font-size: $mdc-avatar-icon-font-size-large;
+            font-size: variables.$icon-font-size-large;
         }
     
         .mdc-avatar__text {
-            font-size: $mdc-avatar-text-font-size-large;
-            line-height: $mdc-avatar-size-large;
+            font-size: variables.$text-font-size-large;
+            line-height: variables.$size-large;
         }
     }
 }
