--- a/src/avatar/styles.scss
+++ b/src/avatar/styles.scss
@@ -3,6 +3,8 @@
 
 .mdc-avatar {
     display: inline-flex;
+    width: 100%;
+    height: 100%;
     justify-content: center;
     align-items: center;
     border-radius: 100%;
