Add symbol component

--- a/src/index.scss
+++ b/src/index.scss
@@ -35,6 +35,7 @@
 @forward './slider' as slider-*; 
 @forward './snackbar' as snackbar-*;
 @forward './switch' as switch-*;
+@forward './symbol' as symbol-*;
 @forward './tabs' as tab-*;
 @forward './text-field' as text-field-*;
 @forward './tooltip' as tooltip-*;
