--- a/src/icon/variables.scss
+++ b/src/icon/variables.scss
@@ -1,7 +1,9 @@
-$size-small: 18px;
-$size-medium: 24px;
-$size-large: 36px;
-$size-xlarge: 48px;
+$smaller-size: 16px;
+$small-size: 18px;
+$medium-size: 24px;
+$large-size: 36px;
+$larger-size: 48px;
+
 $dark-color: rgba(0, 0, 0, 0.54);
 $dark-inactive-color: rgba(0, 0, 0, 0.26);
 $light-color: rgba(255, 255, 255, 0.54);
