--- a/src/icon/styles.scss
+++ b/src/icon/styles.scss
@@ -1,26 +1,72 @@
 @use './variables';
 
 .mdc-icon {
-    user-select: none;
+    font-family: 'Material Icons';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;  /* Preferred icon size */
+    display: inline-block;
+    line-height: 1;
+    text-transform: none;
+    letter-spacing: normal;
+    word-wrap: normal;
+    white-space: nowrap;
+    direction: ltr;
+
+    /* Support for all WebKit browsers. */
+    -webkit-font-smoothing: antialiased;
+    /* Support for Safari and Chrome. */
+    text-rendering: optimizeLegibility;
+
+    /* Support for Firefox. */
+    -moz-osx-font-smoothing: grayscale;
+
+    /* Support for IE. */
+    font-feature-settings: 'liga';
+
+    &.mdc-icon--filled {
+        font-family: 'Material Icons';
+    }
+
+    &.mdc-icon--outlined {
+        font-family: 'Material Icons Outlined';
+    }
+
+    &.mdc-icon--round {
+        font-family: 'Material Icons Round';
+    }
+
+    &.mdc-icon--sharp {
+        font-family: 'Material Icons Sharp';
+    }
+
+    &.mdc-icon--two-tone {
+        font-family: 'Material Icons Two Tone';
+    }
+
+    &.mdc-icon--smaller,
+    &.mdc-icon--16 {
+        font-size: variables.$smaller-size;
+    }
 
     &.mdc-icon--small,
     &.mdc-icon--18 {
-        font-size: variables.$size-small;
+        font-size: variables.$small-size;
     }
 
     &.mdc-icon--medium,
     &.mdc-icon--24 {
-        font-size: variables.$size-medium;
+        font-size: variables.$medium-size;
     }
 
     &.mdc-icon--large,
     &.mdc-icon--36 {
-        font-size: variables.$size-large;
+        font-size: variables.$large-size;
     }
 
-    &.mdc-icon--xlarge,
+    &.mdc-icon--larger,
     &.mdc-icon--48 {
-        font-size: variables.$size-xlarge;
+        font-size: variables.$larger-size;
     }
 
     &.mdc-icon--dark {
