Update main sass imports

--- a/src/index.scss
+++ b/src/index.scss
@@ -31,8 +31,8 @@
 @forward './radio' as radio-*;
 @forward './ripple' as ripple-*;
 @forward './segmented-button' as segmented-button-*;
-@forward './side-sheet' as side-sheet-*; 
-@forward './slider' as slider-*; 
+@forward './side-sheet' as side-sheet-*;
+@forward './slider' as slider-*;
 @forward './snackbar' as snackbar-*;
 @forward './switch' as switch-*;
 @forward './symbol' as symbol-*;
@@ -71,10 +71,11 @@
 @use './radio/styles' as radio;
 @use './ripple/styles' as ripple;
 @use './segmented-button/styles' as segmented-button;
-@use './side-sheet/styles' as side-sheet; 
-@use './slider/styles' as slider; 
+@use './side-sheet/styles' as side-sheet;
+@use './slider/styles' as slider;
 @use './snackbar/styles' as snackbar;
 @use './switch/styles' as switch;
+@use './symbol/styles' as symbol;
 @use './tabs/styles' as tab;
 @use './text-field/styles' as text-field;
 @use './tooltip/styles' as tooltip;
