--- a/docs/src/components/Demo/index.scss
+++ b/docs/src/components/Demo/index.scss
@@ -20,6 +20,11 @@
             @include text-field.outlined-height(42px);
             width: 100%;
             margin-bottom: 16px;
+            padding-right: 8px;
+
+            &__icon--trailing {
+                padding: 0;
+            }
         }
 
         .mdc-form-field {
