--- a/docs/src/App.scss
+++ b/docs/src/App.scss
@@ -1,6 +1,14 @@
 .app {
     .app-top-bar {
+        
+    }
 
+    .app-home-link {
+        color: inherit;
+
+        &:hover {
+            text-decoration: underline;
+        }
     }
 
     .app-drawer {
