--- a/src/menu/index.scss
+++ b/src/menu/index.scss
@@ -1,2 +1,3 @@
-@forward '@material/menu';
 @forward '@material/menu-surface' as surface-*;
+@forward '@material/menu/variables';
+@forward './mixins';
