--- a/docs/src/pages/Menu/index.scss
+++ b/docs/src/pages/Menu/index.scss
@@ -1,6 +1,10 @@
 #menu-page {
     padding-bottom: 256px;
 
+    .demo {
+        overflow: visible;
+    }
+
     #menu-origin {
         .mdc-layout-grid {
             padding: 0;
